# SMKSeksyen24-deeplearning

./: .gitignore
deeplearning-course/: .gitignore  TEACHING_PLAN.md  pdlfc_l1_transcription.md  pyproject.toml
deeplearning-course/notebooks/: 01_image_classification.ipynb  02_text_classification.ipynb  03_tabular_and_collab.ipynb
